src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>ChildDepartments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Dept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy Department?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Department__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll Up Department</label>
        <type>Checkbox</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Parent_Department__c</columns>
        <columns>Policy_Dept__c</columns>
        <columns>Roll_Up_Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>